<resources>
    <string name="app_name">Smart Safari</string>

    <string name="rating_dialog_experience">How was your experience with us?</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_error">Rate minimum one star</string>
    <string name="edit_rating_dialog_experience">Update your experience</string>
    <string name="please_type_your_comment">Please type your comment</string>

    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="newUser">Not a registered user? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="phone_number">Phone Number</string>
    <string name="action_logout">Sign Out</string>

    <string name="role_prompt">Choose a Role</string>

    <string-array name="role_arrays">
        <item>Guide</item>
        <item>Traveler</item>
    </string-array>

    <string name="rationale_location">We need you location to report activity</string>

</resources>
